--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -86,7 +86,7 @@
   <a class="btn btn-primary btn-block" role="button" aria-pressed="true" [routerLink]="['/user/:uid/website']">
     Websites
   </a>
-  <a class="btn btn-danger btn-block" role="button" aria-pressed="true" [routerLink]="['/login, , default']">
+  <a class="btn btn-danger btn-block" role="button" aria-pressed="true" [routerLink]="['/login']">
     Logout
   </a>
 
