--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -32,7 +32,7 @@
     Register
   </a>
 
-  <a class="btn btn-danger btn-block" role="button" aria-pressed="true" [routerLink]="['/login, , default']">
+  <a class="btn btn-danger btn-block" role="button" aria-pressed="true" [routerLink]="['/login']">
     Cancel
   </a>
 </div>
