--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -83,12 +83,18 @@
     </div>
   </form>
 
-  <a class="btn btn-primary btn-block" role="button" aria-pressed="true" [routerLink]="['/user/:uid/website']">
+  <button (click)="buttonClicked($event)"
+          class="btn btn-primary btn-block"
+          aria-pressed="true"
+          [routerLink]="['/user/:uid/website']">
     Websites
-  </a>
-  <a class="btn btn-danger btn-block" role="button" aria-pressed="true" [routerLink]="['/login']">
+  </button>
+  <button (click)="buttonClicked($event)"
+          class="btn btn-danger btn-block"
+          aria-pressed="true"
+          [routerLink]="['/login']">
     Logout
-  </a>
+  </button>
 
 </div>
 
