--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -40,7 +40,7 @@
       Please enter password!
     </span>
 
-    <button (click)="buttonClicked($event)"
+    <button (click)="login()"
             class="btn btn-primary btn-block"
             type="submit"
             [disabled]="!f.valid"
