--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -38,11 +38,7 @@
              type="text"
              placeholder="Username"
              class="form-control"/>
-    </div>
-  </form>
 
-  <form>
-    <div class="form-group">
       <label for="email">
         Email
       </label>
@@ -52,11 +48,7 @@
              type="email"
              placeholder="Email"
              class="form-control"/>
-    </div>
-  </form>
 
-  <form>
-    <div class="form-group">
       <label for="First Name">
         First Name
       </label>
@@ -66,11 +58,7 @@
              type="text"
              placeholder="First Name"
              class="form-control"/>
-    </div>
-  </form>
 
-  <form>
-    <div class="form-group">
       <label for="Last Name">
         Last Name
       </label>
@@ -83,7 +71,7 @@
     </div>
   </form>
 
-  <button (click)="buttonClicked($event)"
+  <button (click)="websites()"
           class="btn btn-primary btn-block"
           aria-pressed="true"
           [routerLink]="['/user/:uid/website']">
