--- a/src/app/components/website/website-edit/website-edit.component.html
+++ b/src/app/components/website/website-edit/website-edit.component.html
@@ -60,11 +60,11 @@
             <div class="row">
               <div class="col-xs-9">
                 <a [routerLink]="['/user/:uid/website/:wid/page']">
-                  Address Book App
+                  Facebook
                 </a>
               </div>
               <div class="col-xs-3">
-                <a class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
+                <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
                   <span class="glyphicon glyphicon-cog"></span>
                 </a>
               </div>
@@ -74,11 +74,11 @@
             <div class="row">
               <div class="col-xs-9">
                 <a [routerLink]="['/user/:uid/website/:wid/page']">
-                  Blogger
+                  Tweeter
                 </a>
               </div>
               <div class="col-xs-3">
-                <a class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
+                <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
                   <span class="glyphicon glyphicon-cog"></span>
                 </a>
               </div>
@@ -88,11 +88,11 @@
             <div class="row">
               <div class="col-xs-9">
                 <a [routerLink]="['/user/:uid/website/:wid/page']">
-                  Blogging App
+                  Gizmodo
                 </a>
               </div>
               <div class="col-xs-3">
-                <a class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
+                <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
                   <span class="glyphicon glyphicon-cog"></span>
                 </a>
               </div>
@@ -102,11 +102,53 @@
             <div class="row">
               <div class="col-xs-9">
                 <a [routerLink]="['/user/:uid/website/:wid/page']">
-                  Script Testing App
+                  Go
                 </a>
               </div>
               <div class="col-xs-3">
-                <a class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
+                <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
+                  <span class="glyphicon glyphicon-cog"></span>
+                </a>
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-xs-9">
+                <a [routerLink]="['/user/:uid/website/:wid/page']">
+                  Tic Tac Toe
+                </a>
+              </div>
+              <div class="col-xs-3">
+                <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
+                  <span class="glyphicon glyphicon-cog"></span>
+                </a>
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-xs-9">
+                <a [routerLink]="['/user/:uid/website/:wid/page']">
+                  Checkers
+                </a>
+              </div>
+              <div class="col-xs-3">
+                <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
+                  <span class="glyphicon glyphicon-cog"></span>
+                </a>
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-xs-9">
+                <a [routerLink]="['/user/:uid/website/:wid/page']">
+                  Chess
+                </a>
+              </div>
+              <div class="col-xs-3">
+                <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
                   <span class="glyphicon glyphicon-cog"></span>
                 </a>
               </div>
