--- a/src/app/components/website/website-list/website-list.component.html
+++ b/src/app/components/website/website-list/website-list.component.html
@@ -30,107 +30,125 @@
 </nav>
 
 <div class="container-fluid jj-body">
-  <ul class="list-group">
-    <li class="list-group-item">
-      <div class="row">
-        <div class="col-xs-9">
-          <a [routerLink]="['/user/:uid/website/:wid/page']">
-            Facebook
-          </a>
+  <div *ngFor="let website of websites">
+    <ul class="list-group">
+      <li class="list-group-item">
+        <div class="row">
+          <div class="col-xs-9">
+            <a [routerLink]="['/user/:uid/website/:wid/page']">
+              {{website.name}}
+            </a>
+          </div>
+          <div class="col-xs-3">
+            <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
+              <span class="glyphicon glyphicon-cog"></span>
+            </a>
+          </div>
         </div>
-        <div class="col-xs-3">
-          <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-            <span class="glyphicon glyphicon-cog"></span>
-          </a>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-item">
-      <div class="row">
-        <div class="col-xs-9">
-          <a [routerLink]="['/user/:uid/website/:wid/page']">
-            Tweeter
-          </a>
-        </div>
-        <div class="col-xs-3">
-          <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-            <span class="glyphicon glyphicon-cog"></span>
-          </a>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-item">
-      <div class="row">
-        <div class="col-xs-9">
-          <a [routerLink]="['/user/:uid/website/:wid/page']">
-            Gizmodo
-          </a>
-        </div>
-        <div class="col-xs-3">
-          <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-            <span class="glyphicon glyphicon-cog"></span>
-          </a>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-item">
-    <div class="row">
-      <div class="col-xs-9">
-        <a [routerLink]="['/user/:uid/website/:wid/page']">
-          Go
-        </a>
-      </div>
-      <div class="col-xs-3">
-        <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-          <span class="glyphicon glyphicon-cog"></span>
-        </a>
-      </div>
-    </div>
-  </li>
-    <li class="list-group-item">
-      <div class="row">
-        <div class="col-xs-9">
-          <a [routerLink]="['/user/:uid/website/:wid/page']">
-            Tic Tac Toe
-          </a>
-        </div>
-        <div class="col-xs-3">
-          <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-            <span class="glyphicon glyphicon-cog"></span>
-          </a>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-item">
-      <div class="row">
-        <div class="col-xs-9">
-          <a [routerLink]="['/user/:uid/website/:wid/page']">
-            Checkers
-          </a>
-        </div>
-        <div class="col-xs-3">
-          <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-            <span class="glyphicon glyphicon-cog"></span>
-          </a>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-item">
-      <div class="row">
-        <div class="col-xs-9">
-          <a [routerLink]="['/user/:uid/website/:wid/page']">
-            Chess
-          </a>
-        </div>
-        <div class="col-xs-3">
-          <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-            <span class="glyphicon glyphicon-cog"></span>
-          </a>
-        </div>
-      </div>
-    </li>
-  </ul>
+      </li>
+    </ul>
+  </div>
 </div>
+<!--<li class="list-group-item">-->
+<!--<div class="row">-->
+<!--<div class="col-xs-9">-->
+<!--<a [routerLink]="['/user/:uid/website/:wid/page']">-->
+<!--Facebook-->
+<!--</a>-->
+<!--</div>-->
+<!--<div class="col-xs-3">-->
+<!--<a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">-->
+<!--<span class="glyphicon glyphicon-cog"></span>-->
+<!--</a>-->
+<!--</div>-->
+<!--</div>-->
+<!--</li>-->
+<!--<li class="list-group-item">-->
+<!--<div class="row">-->
+<!--<div class="col-xs-9">-->
+<!--<a [routerLink]="['/user/:uid/website/:wid/page']">-->
+<!--Tweeter-->
+<!--</a>-->
+<!--</div>-->
+<!--<div class="col-xs-3">-->
+<!--<a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">-->
+<!--<span class="glyphicon glyphicon-cog"></span>-->
+<!--</a>-->
+<!--</div>-->
+<!--</div>-->
+<!--</li>-->
+<!--<li class="list-group-item">-->
+<!--<div class="row">-->
+<!--<div class="col-xs-9">-->
+<!--<a [routerLink]="['/user/:uid/website/:wid/page']">-->
+<!--Gizmodo-->
+<!--</a>-->
+<!--</div>-->
+<!--<div class="col-xs-3">-->
+<!--<a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">-->
+<!--<span class="glyphicon glyphicon-cog"></span>-->
+<!--</a>-->
+<!--</div>-->
+<!--</div>-->
+<!--</li>-->
+<!--<li class="list-group-item">-->
+<!--<div class="row">-->
+<!--<div class="col-xs-9">-->
+<!--<a [routerLink]="['/user/:uid/website/:wid/page']">-->
+<!--Go-->
+<!--</a>-->
+<!--</div>-->
+<!--<div class="col-xs-3">-->
+<!--<a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">-->
+<!--<span class="glyphicon glyphicon-cog"></span>-->
+<!--</a>-->
+<!--</div>-->
+<!--</div>-->
+<!--</li>-->
+<!--<li class="list-group-item">-->
+<!--<div class="row">-->
+<!--<div class="col-xs-9">-->
+<!--<a [routerLink]="['/user/:uid/website/:wid/page']">-->
+<!--Tic Tac Toe-->
+<!--</a>-->
+<!--</div>-->
+<!--<div class="col-xs-3">-->
+<!--<a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">-->
+<!--<span class="glyphicon glyphicon-cog"></span>-->
+<!--</a>-->
+<!--</div>-->
+<!--</div>-->
+<!--</li>-->
+<!--<li class="list-group-item">-->
+<!--<div class="row">-->
+<!--<div class="col-xs-9">-->
+<!--<a [routerLink]="['/user/:uid/website/:wid/page']">-->
+<!--Checkers-->
+<!--</a>-->
+<!--</div>-->
+<!--<div class="col-xs-3">-->
+<!--<a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">-->
+<!--<span class="glyphicon glyphicon-cog"></span>-->
+<!--</a>-->
+<!--</div>-->
+<!--</div>-->
+<!--</li>-->
+<!--<li class="list-group-item">-->
+<!--<div class="row">-->
+<!--<div class="col-xs-9">-->
+<!--<a [routerLink]="['/user/:uid/website/:wid/page']">-->
+<!--Chess-->
+<!--</a>-->
+<!--</div>-->
+<!--<div class="col-xs-3">-->
+<!--<a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">-->
+<!--<span class="glyphicon glyphicon-cog"></span>-->
+<!--</a>-->
+<!--</div>-->
+<!--</div>-->
+<!--</li>-->
+<!--</ul>-->
+<!--</div>-->
 
 <nav class="navbar navbar-default_blue navbar-fixed-bottom">
   <div class="container-fluid">
