--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -47,7 +47,8 @@
              id="email"
              type="email"
              placeholder="Email"
-             class="form-control"/>
+             class="form-control"
+             email/>
 
       <label for="First Name">
         First Name
