--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -166,7 +166,7 @@
     <nav class="navbar navbar-default navbar-fixed-bottom">
       <div class="container-fluid">
         <p class="navbar-brand pull-right">
-          <a [routerLink]="['/user/:uid']">
+          <a (click)="goToProfile()" [routerLink]="['/user/:uid']">
             <span class="glyphicon glyphicon-user"></span>
           </a>
         </p>
