--- a/src/app/components/website/website-edit/website-edit.component.html
+++ b/src/app/components/website/website-edit/website-edit.component.html
@@ -54,109 +54,24 @@
 <div class="container-fluid jj-body">
   <div class="row">
     <div class="col-sm-3 hidden-xs">
-      <div class="container-fluid">
-        <ul class="list-group">
-          <li class="list-group-item">
-            <div class="row">
-              <div class="col-xs-9">
-                <a [routerLink]="['/user/:uid/website/:wid/page']">
-                  Facebook
-                </a>
+          <div *ngFor="let website of websites">
+            <li class="list-group-item">
+              <div class="row">
+                <div class="col-xs-9">
+                  <a [routerLink]="['/user/:uid/website/:wid/page']">
+                    {{website.name}}
+                  </a>
+                </div>
+                <div class="col-xs-3">
+                  <a class="pull-right" [routerLink]="['/user', website.developerId, 'website', website._id]">
+                    <span class="glyphicon glyphicon-cog"></span>
+                  </a>
+                </div>
               </div>
-              <div class="col-xs-3">
-                <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-                  <span class="glyphicon glyphicon-cog"></span>
-                </a>
-              </div>
-            </div>
-          </li>
-          <li class="list-group-item">
-            <div class="row">
-              <div class="col-xs-9">
-                <a [routerLink]="['/user/:uid/website/:wid/page']">
-                  Tweeter
-                </a>
-              </div>
-              <div class="col-xs-3">
-                <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-                  <span class="glyphicon glyphicon-cog"></span>
-                </a>
-              </div>
-            </div>
-          </li>
-          <li class="list-group-item">
-            <div class="row">
-              <div class="col-xs-9">
-                <a [routerLink]="['/user/:uid/website/:wid/page']">
-                  Gizmodo
-                </a>
-              </div>
-              <div class="col-xs-3">
-                <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-                  <span class="glyphicon glyphicon-cog"></span>
-                </a>
-              </div>
-            </div>
-          </li>
-          <li class="list-group-item">
-            <div class="row">
-              <div class="col-xs-9">
-                <a [routerLink]="['/user/:uid/website/:wid/page']">
-                  Go
-                </a>
-              </div>
-              <div class="col-xs-3">
-                <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-                  <span class="glyphicon glyphicon-cog"></span>
-                </a>
-              </div>
-            </div>
-          </li>
-          <li class="list-group-item">
-            <div class="row">
-              <div class="col-xs-9">
-                <a [routerLink]="['/user/:uid/website/:wid/page']">
-                  Tic Tac Toe
-                </a>
-              </div>
-              <div class="col-xs-3">
-                <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-                  <span class="glyphicon glyphicon-cog"></span>
-                </a>
-              </div>
-            </div>
-          </li>
-          <li class="list-group-item">
-            <div class="row">
-              <div class="col-xs-9">
-                <a [routerLink]="['/user/:uid/website/:wid/page']">
-                  Checkers
-                </a>
-              </div>
-              <div class="col-xs-3">
-                <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-                  <span class="glyphicon glyphicon-cog"></span>
-                </a>
-              </div>
-            </div>
-          </li>
-          <li class="list-group-item">
-            <div class="row">
-              <div class="col-xs-9">
-                <a [routerLink]="['/user/:uid/website/:wid/page']">
-                  Chess
-                </a>
-              </div>
-              <div class="col-xs-3">
-                <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-                  <span class="glyphicon glyphicon-cog"></span>
-                </a>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </div>
+            </li>
+          </div>
     </div>
+
     <div class="col-sm-9">
 
       <form>
