--- a/src/app/components/website/website-list/website-list.component.html
+++ b/src/app/components/website/website-list/website-list.component.html
@@ -1,12 +1,5 @@
 <!DOCTYPE html>
 
-<!--charset="UTF-8"-->
-<!--name="viewport" content="initial-scale=1, user-scalable=no"-->
-<!--Websites-->
-<!--rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"-->
-<!--rel="stylesheet" href="../../css/style.css"-->
-<!--src="../../vendors/bootstrap/dist/js/bootstrap.min.js"-->
-
 <nav class="navbar navbar-default_blue navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-brand pull-left">
@@ -30,125 +23,16 @@
 </nav>
 
 <div class="container-fluid jj-body">
-  <!--<div *ngFor="let website of websites">-->
-  <!--<ul class="list-group">-->
-  <!--<li class="list-group-item">-->
-  <!--<div class="row">-->
-  <!--<div class="col-xs-9">-->
-  <!--<a [routerLink]="['/user/:uid/website/:wid/page']">-->
-  <!--{{website.name}}-->
-  <!--</a>-->
-  <!--</div>-->
-  <!--<div class="col-xs-3">-->
-  <!--<a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">-->
-  <!--<span class="glyphicon glyphicon-cog"></span>-->
-  <!--</a>-->
-  <!--</div>-->
-  <!--</div>-->
-  <!--</li>-->
-  <!--</ul>-->
-  <!--</div>-->
-  <!--</div>-->
-  <ul>
+  <div *ngFor="let website of websites">
     <li class="list-group-item">
-      <div class="row">
-        <div class="col-xs-9">
-          <a [routerLink]="['/user/:uid/website/:wid/page']">
-            Facebook
-          </a>
-        </div>
-        <div class="col-xs-3">
-          <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-            <span class="glyphicon glyphicon-cog"></span>
-          </a>
-        </div>
-      </div>
+      <a [routerLink]="['/user/:uid/website/:wid/page']">
+        {{website.name}}
+      </a>
+      <a  class="pull-right" [routerLink]="['/user', website.developerId, 'website', website._id]">
+        <span class="glyphicon glyphicon-cog"></span>
+      </a>
     </li>
-    <li class="list-group-item">
-      <div class="row">
-        <div class="col-xs-9">
-          <a [routerLink]="['/user/:uid/website/:wid/page']">
-            Tweeter
-          </a>
-        </div>
-        <div class="col-xs-3">
-          <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-            <span class="glyphicon glyphicon-cog"></span>
-          </a>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-item">
-      <div class="row">
-        <div class="col-xs-9">
-          <a [routerLink]="['/user/:uid/website/:wid/page']">
-            Gizmodo
-          </a>
-        </div>
-        <div class="col-xs-3">
-          <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-            <span class="glyphicon glyphicon-cog"></span>
-          </a>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-item">
-      <div class="row">
-        <div class="col-xs-9">
-          <a [routerLink]="['/user/:uid/website/:wid/page']">
-            Go
-          </a>
-        </div>
-        <div class="col-xs-3">
-          <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-            <span class="glyphicon glyphicon-cog"></span>
-          </a>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-item">
-      <div class="row">
-        <div class="col-xs-9">
-          <a [routerLink]="['/user/:uid/website/:wid/page']">
-            Tic Tac Toe
-          </a>
-        </div>
-        <div class="col-xs-3">
-          <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-            <span class="glyphicon glyphicon-cog"></span>
-          </a>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-item">
-      <div class="row">
-        <div class="col-xs-9">
-          <a [routerLink]="['/user/:uid/website/:wid/page']">
-            Checkers
-          </a>
-        </div>
-        <div class="col-xs-3">
-          <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-            <span class="glyphicon glyphicon-cog"></span>
-          </a>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-item">
-      <div class="row">
-        <div class="col-xs-9">
-          <a [routerLink]="['/user/:uid/website/:wid/page']">
-            Chess
-          </a>
-        </div>
-        <div class="col-xs-3">
-          <a (click)="editWebsite()" class="pull-right" [routerLink]="['/user/:uid/website/:wid']">
-            <span class="glyphicon glyphicon-cog"></span>
-          </a>
-        </div>
-      </div>
-    </li>
-  </ul>
+  </div>
 </div>
 
 <nav class="navbar navbar-default_blue navbar-fixed-bottom">
