--- a/src/app/components/website/website-list/website-list.component.html
+++ b/src/app/components/website/website-list/website-list.component.html
@@ -15,7 +15,7 @@
       </a>
     </div>
     <p class="navbar-brand pull-right">
-      <a class="navbar-link" [routerLink]="['/user/:uid/website/new']">
+      <a class="navbar-link" (click)="newWebsite()">
         <span class="glyphicon glyphicon-plus"></span>
       </a>
     </p>
